--- a/_posts/0000-01-02-direll.md
+++ b/_posts/0000-01-02-direll.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our Direll's slide!"
 ---
-Something new
+Something New Using Desktop GitHub App
 Use the left arrow to go back!
